Finished creating a new todo in the createtodo component. Also fixed the navbar so it has a dropdown menu on small screens.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.card {
+  margin-bottom: 15px;
+}
+
+.btn {
+  margin: 0 10px;
+}
